--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="warmDarkGrey">#ccc3b9</color>
     <color name="lightBlack">#484848</color>
 
+    <color name="colorDarkerRed">#8c1111</color>
     <color name="colorDarkRed">#9f1717</color>
     <color name="colorTest">#D86060</color>
 
