--- a/app/src/main/res/drawable/edittext_custom.xml
+++ b/app/src/main/res/drawable/edittext_custom.xml
@@ -3,8 +3,16 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/SENScolorRed"/>
-            <stroke android:color="@color/SENScolorBlack" android:width="2dp"/>
+            <gradient
+                android:angle="-90"
+                android:startColor="@color/SENScolorRed"
+                android:endColor="@color/colorDarkerRed"
+                />
+            <stroke
+                android:width="1dp"
+                android:color="@color/colorDarkerRed"
+                />
+
             <corners android:radius="15dp"/>
         </shape>
     </item>
