--- a/app/src/main/res/layout/task_complete.xml
+++ b/app/src/main/res/layout/task_complete.xml
@@ -68,8 +68,8 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="120dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="150dp"
