Patientliste go home you drunk

--- a/app/src/main/res/drawable/opret_patient_knap.xml
+++ b/app/src/main/res/drawable/opret_patient_knap.xml
@@ -15,12 +15,14 @@
                 android:height="50dp"
                 />
             <gradient
-                android:startColor="@color/SENScolorWhite"
-                android:endColor="@color/eggLightWhiteShadow"
+                android:angle="-90"
+                android:startColor="@color/loginBottomGradient"
+                android:centerColor="@color/loginCenterGradient"
+                android:endColor="@color/loginTopGradient"
                 />
             <stroke
-                android:width="2dp"
-                android:color="@color/SENScolorBlack"
+                android:width="1dp"
+                android:color="@color/eggwhiteShadow"
                 />
         </shape>
 
