--- a/app/src/main/res/layout/patient_list_item.xml
+++ b/app/src/main/res/layout/patient_list_item.xml
@@ -5,8 +5,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingRight="5dp"
-    android:paddingLeft="5dp">
+    android:paddingBottom="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,9 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginLeft="5dp"
         android:layout_marginTop="0dp"
-        android:layout_marginRight="5dp"
         android:background="@drawable/patient_list_bar"
         android:orientation="horizontal">
 
@@ -33,7 +30,7 @@
                 android:gravity="end"
                 android:text="Simon Steen Pedersen"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/SENScolorWhite"
                 android:textSize="24sp" />
 
             <TextView
@@ -42,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="ID: p1"
-                android:textColor="@android:color/black"
+                android:textColor="@color/SENScolorWhite"
                 android:textSize="16sp"
                 android:textStyle="italic" />
         </LinearLayout>
