--- a/app/src/main/res/layout/recycle_list_item.xml
+++ b/app/src/main/res/layout/recycle_list_item.xml
@@ -7,12 +7,17 @@
     android:orientation="horizontal"
     android:paddingBottom="10dp"
     android:paddingTop="10dp"
-    android:paddingLeft="4dp">
+    android:paddingLeft="4dp"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
+    android:background="?attr/selectableItemBackground">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="80dp"
-        android:layout_height="80dp">
+        android:layout_height="80dp"
+        android:focusableInTouchMode="true"
+        android:focusable="true">
 
 
         <ImageView
