--- a/app/src/main/res/layout/recycle_list_item.xml
+++ b/app/src/main/res/layout/recycle_list_item.xml
@@ -8,14 +8,14 @@
     android:paddingBottom="10dp"
     android:paddingTop="10dp"
     android:paddingLeft="4dp"
-    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:background="?attr/selectableItemBackground">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:focusable="true">
+        android:focusableInTouchMode="true">
 
 
         <ImageView
