--- a/app/src/main/res/layout/recycle_list_item.xml
+++ b/app/src/main/res/layout/recycle_list_item.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="10dp"
     android:paddingTop="10dp"
     android:paddingLeft="4dp"
-    android:focusableInTouchMode="true"
+    android:focusable="true"
     android:background="?attr/selectableItemBackground">
 
     <android.support.constraint.ConstraintLayout
