--- a/app/src/main/res/layout/recycle_list_item.xml
+++ b/app/src/main/res/layout/recycle_list_item.xml
@@ -15,7 +15,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:focusableInTouchMode="true">
+        android:focusable="true">
 
 
         <ImageView
