--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -100,5 +100,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logIndKnap" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="s175446-Burhan Shafiq \n s163989-Alen Hasanagic \n s175195-Simon S. Pedersen \n s175212-Tobias B. Hagemann \n s175448-Johannes G. R. Nissen "
+        android:textColor="@color/SENScolorWhite"
+        app:layout_constraintBottom_toTopOf="@+id/glemtLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
